# powerswitch

./: README.md  pyproject.toml
src/powerswitch/: client.py  html_parser.py
tests/: conftest.py  mocks.py  test_api.py  test_html_parse.py  test_rest_client.py
