[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "powerswitch"
version = "0.1.0"
description = "A Python library for controlling power switches"
authors = [
  { name="David Geene", email="" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest", "mkdocs-material", "black", "flake8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
